# voice-presentation-control

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  audio_process.ipynb  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release-tagged-version.yml
tests/: test_version.py  test_voice_presentation_control.py
voice_presentation_control/: __init__.py  __main__.py  action_matcher.py  actor.py  cli.py  controller.py  detect_voice.py  mic.py  perform_action.py  recognizer.py
voice_presentation_control/configs/: actions.json
