[tool.poetry]
name = "voice-presentation-control"
version = "0.1.0"
description = ""
authors = ["Xyphuz <xyphuzwu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyAudio = "^0.2.11"
typer = "^0.4.1"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vpc = "voice_presentation_control.cli:start_cli"
