[tool.poetry]
name = "voice-presentation-control"
version = "0.1.6"
description = "voice-presentation-control is a tool that allows you to control your presentation using voice when you don't have a presentation pen or when it's inconvinient to use the keyboard."
authors = ["Xyphuz <xyphuzwu@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/wst24365888/voice-presentation-control"
repository = "https://github.com/wst24365888/voice-presentation-control"
include = [
    "LICENSE",
    "voice_presentation_control/vosk_models/**",
]

[tool.poetry.dependencies]
python = "^3.9"
PyAudio = "^0.2.11"
typer = "^0.4.1"
PyAutoGUI = "^0.9.53"
numpy = "^1.22.3"
SpeechRecognition = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vpc = "voice_presentation_control.cli:start_cli"
